--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/campaign/campaign.css">
+      <link rel="stylesheet" href="app/donate/donate.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/test/test.css">
       <!-- endinjector -->
@@ -75,6 +76,8 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/campaign/campaign.controller.js"></script>
           <script src="app/campaign/campaign.js"></script>
+          <script src="app/donate/donate.controller.js"></script>
+          <script src="app/donate/donate.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/test/test.controller.js"></script>
