--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -13,7 +13,11 @@
     <div class="col-lg-12">
       <h1 class="page-header">Features:</h1>
       <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
+        <li>
+          <img ng-src="{{thing.image}}" class="img-responsive" />
+          <a ng-href="/campaign/{{thing._id}}" tooltip="{{thing._id}}">{{thing.title}}</a>
+          <p>{{thing.pitch}}</p>
+        </li>
       </ul>
     </div>
   </div>
