--- a/client/app/donate/donate.html
+++ b/client/app/donate/donate.html
@@ -47,15 +47,31 @@
         <label for="exampleInputEmail1">Zipcode</label>
         <input type="text" class="form-control" id="exampleInputEmail1" placeholder="text">
       </div>
-        <div class="form-group form-inline">
-        <label for="exampleInputEmail1">Card Number</label>
-        <input type="text" class="form-control" placeholder="1234-1234-1234-1234">
-        <label for="exampleInputEmail1">Expiry Date</label>
-        <input type="text" class="form-control" placeholder="06/15">
-        <label for="exampleInputEmail1">CVC</label>
-        <input type="text" class="form-control" placeholder="432">
-      </div>
-      <button type="submit" ng-click="submit()" class="btn btn-default">Submit</button>
+        <form action="" method="POST" id="payment-form">
+  <span class="payment-errors"></span>
+
+  <div class="form-row">
+    <label>
+      <span>Card Number</span>
+      <input type="text" size="20" data-stripe="number"/>
+    </label>
+  </div>
+
+  <div class="form-row">
+    <label>
+      <span>CVC</span>
+      <input type="text" size="4" data-stripe="cvc"/>
+    </label>
+  </div>
+    <div class="form-row">
+      <label>
+        <span>Expiration (MM/YYYY)</span>
+        <input type="text" size="2" data-stripe="exp-month"/>
+      </label>
+      <span> / </span>
+      <input type="text" size="4" data-stripe="exp-year"/>
+    </div>
+    <button type="submit" ng-click="submit()" class="btn btn-default">Submit Payment</button>
     </form>
     </div>
   </div>
