--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -13,58 +13,11 @@
     <div class="col-lg-12">
       <div class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
         <img ng-src="{{thing.image}}" class="img-responsive" /></li>
-        <a ng-href="/campaign/{{thing._id}}" tooltip="{{thing._id}}">{{thing.title}}</a></h1>
+        <h1><a ng-href="/campaign/{{thing._id}}" tooltip="{{thing._id}}">{{thing.title}}</a></h1>
         <p>{{thing.pitch}}</p>
-      </div>
-      <!--  Content Area-->
-      <div class="row content">
-        <div class="col-md-4 col-sm-6">
-          <div class="thumbnail">
-          <img src="..." alt="...">
-          <div class="caption">
-            <h3>Thumbnail label</h3>
-            <p>...</p>
-            <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70"
+        <div class="progress-bar" role="progressbar" aria-valuenow="70"
           aria-valuemin="0" aria-valuemax="100" style="width:70%">
             <span class="sr-only">70% Complete</span>
-          </div>
-        </div> <!--end progress bar-->
-            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-          </div> <!--end caption-->
-        </div> <!--end thumbnail-->
-        </div> <!--end col-md-4 col-sm-6-->
-        <div class="col-md-4 col-sm-6">
-          <div class="thumbnail">
-          <img src="..." alt="...">
-          <div class="caption">
-            <h3>Thumbnail label</h3>
-            <p>...</p>
-            <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70"
-          aria-valuemin="0" aria-valuemax="100" style="width:70%">
-            <span class="sr-only">70% Complete</span>
-          </div>
-        </div> <!--end progress bar-->
-            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-          </div> <!--end caption-->
-        </div><!--end thumbnail-->
-        </div><!--end col-md-4 col-sm-6-->
-        <div class="col-md-4 col-sm-6">
-          <div class="thumbnail">
-          <img src="..." alt="...">
-          <div class="caption">
-            <h3>Thumbnail label</h3>
-            <p>...</p>
-            <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70"
-          aria-valuemin="0" aria-valuemax="100" style="width:70%">
-            <span class="sr-only">70% Complete</span>
-          </div>
-        </div> <!--end progress bar-->
-            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-          </div><!--end caption-->
-        </div><!--end thumbnail-->
         </div><!--end col-md-4 col-sm-6-->
       </div><!--end row content-->
     </div>
