background and styling

--- a/client/app/campaign/campaign.html
+++ b/client/app/campaign/campaign.html
@@ -1,8 +1,9 @@
+<navbar></navbar>
 <div class="col-md-10 col-md-offset-1">
 
   <div class="row content">
     <div class="col-md-6 col-sm-6">
-      <img ng-src="{{campaign.image}}" alt="..." class="img-rounded">
+      <img ng-src="{{campaign.image}}" alt="..." class="img-responsive">
       <h3>{{campaign.title}}</h3>
         <p>{{campaign.pitch}}</p>
       </div><!--end col-md-6 col-sm-6-->
@@ -24,6 +25,6 @@
       </div> <!--end col-md-4 col-sm-6-->
     </div><!--end col-md-6 col-sm-6-->
   </div><!--end row content-->
-
+<footer></footer>
 
 </div>
