--- a/client/app/donate/donate.html
+++ b/client/app/donate/donate.html
@@ -1,3 +1,4 @@
+<navbar></navbar>
 <div class="container bs-docs-container">
   <h1>Your Donations</h1>
   <h3>Select an Amount</h3>
@@ -55,8 +56,9 @@
         <label for="exampleInputEmail1">CVC</label>
         <input type="text" class="form-control" placeholder="432">
       </div>
-      <button type="submit" ng-click="submit()" class="btn btn-default">Submit</button>
+      <a href="/thanks" class="btn btn-default">Checkout</a>
     </form>
     </div>
   </div>
 </div>
+<footer></footer>
