--- a/client/app/thanks/thanks.html
+++ b/client/app/thanks/thanks.html
@@ -1,4 +1,4 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<navbar></navbar>
 
 <div class="container">
   <div class="row">
@@ -11,7 +11,7 @@
       <!--  Content Area-->
 <div class="cover-container">
           <div class="inner cover">
-            <img src="https://download.unsplash.com/33/U6XzvTb5RmuqrfNkQI0l_IMG_1861.jpg" alt="HTML5 Icon" width="1000px">
+            <img src="https://download.unsplash.com/33/U6XzvTb5RmuqrfNkQI0l_IMG_1861.jpg" alt="HTML5 Icon" width="1000px" height="500px">
             <h1 class="cover-heading">Thank you for your donation.</h1>
           </div>
 
@@ -22,11 +22,4 @@
 
         </div>
 
-<!--  Footer Area-->
-  <div class="row footer">
-    <div class="col-xs-12 text-center">
-      <p>&copy; 2015 FundNation.</p>
-    </div><!--col-xs-12 text-center-->
-  </div><!--end row footer-->
-
-  <p class="p">Demo by Sarry Zheng, Sarah Kwak, Josie Zocca, Kelly Luce</a>.</p>
+<footer></footer>
