--- a/client/index.html
+++ b/client/index.html
@@ -25,8 +25,11 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/campaign/campaign.css">
       <link rel="stylesheet" href="app/donate/donate.css">
+      <link rel="stylesheet" href="app/footer/footer.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/navbar/navbar.css">
       <link rel="stylesheet" href="app/test/test.css">
+      <link rel="stylesheet" href="app/thanks/thanks.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
@@ -78,10 +81,14 @@
           <script src="app/campaign/campaign.js"></script>
           <script src="app/donate/donate.controller.js"></script>
           <script src="app/donate/donate.js"></script>
+          <script src="app/footer/footer.directive.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/navbar/navbar.directive.js"></script>
           <script src="app/test/test.controller.js"></script>
           <script src="app/test/test.js"></script>
+          <script src="app/thanks/thanks.controller.js"></script>
+          <script src="app/thanks/thanks.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
